ON-PREM P2: add durable Postgres chat realtime
